--- a/toviSpring/pom.xml
+++ b/toviSpring/pom.xml
@@ -30,13 +30,15 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-jdbc</artifactId>
-			<version>${spring-framework.version}</version>
-		</dependency>
+			</dependency>
 		<dependency>
     		<groupId>org.junit.jupiter</groupId>
     		<artifactId>junit-jupiter-api</artifactId>
-    		<version>5.8.2</version>
     		<scope>test</scope>
+		</dependency>
+		<dependency> 
+            <groupId>org.springframework</groupId> 
+            <artifactId>spring-test</artifactId> 
 		</dependency>
 		
 		<dependency>
